# PyObservability

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-launch.sh  entrypoint.sh  healthcheck.sh  prometheus.yml  pyproject.toml  release_notes.md  requirements.txt
.github/workflows/: docker.yml  notes.yml  python-publish.yml
docker/: Dockerfile  docker-compose-grafana.yml  docker-compose-server.yml  entrypoint.sh  healthcheck.sh
pyobservability/: __init__.py  config.py  github.py  kuma.py  main.py  monitor.py  prometheus.py  transport.py
pyobservability/config/: enums.py  settings.py  squire.py
pyobservability/static/: app.js  styles.css
pyobservability/static_legacy/: app.js
pyobservability/templates/: index.html  kuma.html
samples/: dashboard.json  docker-compose-grafana.yml  docker-compose-server.yml  secrets.json
